--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -38,10 +38,10 @@ jobs:
     container:
       image: amd64/rust
     steps:
-      - name: Install LLVM and libclang
+      - name: Install build dependencies
         run: |
           apt-get update
-          apt-get install -y libclang-dev llvm-dev
+          apt-get install -y clang libclang-dev cmake libssl-dev pkg-config
 
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
