--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -67,7 +67,8 @@ jobs:
       - name: Collect coverage data
           # Generate separate reports for nextest and doctests, and combine them.
         run: |
-          cargo nextest run  --workspace --exclude=robustmq-test --exclude=grpc-clients 
+          cargo llvm-cov clean --workspace 
+          cargo llvm-cov nextest  --workspace --exclude=robustmq-test --exclude=grpc-clients 
           cargo llvm-cov report --lcov --output-path lcov.info
       - name: Upload coverage data to codecov
         # Run this step even if the test step fails. Upload it right now because
