--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,12 +45,16 @@ edition = "2021"
 license = "Apache-2.0"
 
 [workspace.dependencies]
+rustls-pki-types = { version = "1.11.0", override = true }
+bindgen = { version = "0.69.5", override = true}
 ## async lib
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.9", features = ["codec"] }
 tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
-## web lib
+rustls = "0.23.23"
+rustls-pemfile = "2"
+## axum
 axum = { version = "0.7.2", features = ["ws"] }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
@@ -60,11 +64,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 humantime-serde = "1.1.1"
-## log lib
-log4rs = "1.2.0"
-log = "0.4.0"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
 ## cmd lib
 clap-cargo = "0.14.1"
 clap = { version = "4.4.7", features = ["derive"] }
@@ -77,11 +76,26 @@ grep = "0.3.2"
 prometheus = "0.13.3"
 prometheus_exporter = "0.8"
 prometheus-client = "0.23.1"
-# b6783a10984146c62ceaa6997fef1385d2ee5ae8
-#
+## log lib
+log4rs = "1.2.0"
+log = "0.4.0"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
+# opentelemetry
 opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "b6783a10984146c62ceaa6997fef1385d2ee5ae8", features = ["trace"] }
 opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "b6783a10984146c62ceaa6997fef1385d2ee5ae8", features = ["rt-tokio"] }
 opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "b6783a10984146c62ceaa6997fef1385d2ee5ae8", features = ["grpc-tonic"] }
+# prost
+prost = "0.13.2"
+prost-build = "0.13.2"
+prost-validate = {version = "0.2.6", features=["derive"]}
+prost-validate-build = "0.2.6"
+# tonic
+tonic = "0.12.3"
+tonic-build = "0.12.3"
+# quic
+quinn = "0.11.6"
+rcgen = "0.13.2"
 ## other
 signal-hook = "0.3.17"
 lazy_static = "^1.4"
@@ -89,13 +103,7 @@ thiserror = "1"
 bytes = { version = "1", features = ["serde"] }
 futures-util = "0.3.30"
 rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
-tonic = "0.12.3"
-tonic-build = "0.12.3"
 bincode = "1.3.3"
-prost = "0.13.2"
-prost-build = "0.13.2"
-prost-validate = {version = "0.2.6", features=["derive"]}
-prost-validate-build = "0.2.6"
 ahash = "0.8.7"
 byteorder = "1.5.0"
 toml = "0.8.8"
@@ -104,7 +112,6 @@ mobc = "0.8.3"
 dashmap = { version = "6.0.1", features = ["serde"] }
 snowflake = "1.3.0"
 rumqttc = "0.24.0"
-rustls-pemfile = "2"
 paho-mqtt = { version = "0.12.5", default-features = false, features = [
     "bundled",
     "vendored-ssl",
@@ -121,9 +128,6 @@ rand = "0.8.5"
 opendal = { version = "0.51", features = ["services-s3"] }
 #format
 prettytable-rs = "^0.10"
-
-
-
 ## workspaces members
 mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
 mqtt-bridge-elasticsearch = { path = "src/mqtt-bridge/elasticsearch" }
