--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -54,3 +54,10 @@ grep.workspace = true
 prometheus.workspace = true
 prometheus-client.workspace = true
 opentelemetry.workspace = true
+quinn.workspace = true
+rcgen.workspace = true
+rustls-pki-types.workspace = true
+rustls.workspace = true
+bindgen.workspace = true
+# test
+googletest.workspace = true
