test: client send packet to server

--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -59,5 +59,9 @@ rcgen.workspace = true
 rustls-pki-types.workspace = true
 rustls.workspace = true
 bindgen.workspace = true
+
+
+[dev-dependencies]
 # test
 googletest.workspace = true
+robustmq-test.workspace = true
