--- a/src/delay-message/Cargo.toml
+++ b/src/delay-message/Cargo.toml
@@ -23,3 +23,9 @@ license.workspace = true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
+common-base.workspace = true
+storage-adapter.workspace = true
+metadata-struct.workspace = true
+dashmap.workspace = true
+tokio.workspace = true
+tokio-util.workspace = true
