--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ bindgen = { version = "0.69.5" }
 ## async lib
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
-tokio-util = { version = "0.7.9", features = ["codec"] }
+tokio-util = { version = "0.7.9", features = ["full"] }
 tokio-rustls = { version = "0.26", default-features = false, features = [
     "logging",
     "tls12",
