--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "src/placement-center",
     "src/cli-command",
     "src/delay-message",
+    "src/idempotent-message",
     "src/grpc-clients",
     "src/cmd",
     "src/common/base",
@@ -138,6 +139,7 @@ prettytable-rs = "^0.10"
 mqtt-broker = { path = "src/mqtt-broker" }
 amqp-broker = { path = "src/amqp-broker" }
 delay-message = { path = "src/delay-message" }
+idempotent-message = { path = "src/idempotent-message" }
 placement-center = { path = "src/placement-center" }
 cli-command = { path = "src/cli-command" }
 grpc-clients = { path = "src/grpc-clients" }
