--- a/src/schema-register/Cargo.toml
+++ b/src/schema-register/Cargo.toml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 [package]
-name = "message-schema"
+name = "schema-register"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -31,3 +31,4 @@ tokio.workspace = true
 tokio-util.workspace = true
 log.workspace = true
 futures.workspace = true
+valico.workspace = true
