--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -48,3 +48,4 @@ opentelemetry.workspace = true
 opentelemetry_sdk.workspace = true
 opentelemetry-otlp.workspace = true
 valico.workspace = true
+apache-avro.workspace = true
