--- a/src/schema-register/Cargo.toml
+++ b/src/schema-register/Cargo.toml
@@ -33,3 +33,7 @@ log.workspace = true
 futures.workspace = true
 valico.workspace = true
 serde_json.workspace = true
+apache-avro.workspace = true
+serde.workspace = true
+protobuf.workspace = true
+protobuf-codegen.workspace = true
