--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@
 members = [
     "src/mqtt-broker",
     "src/amqp-broker",
+    "src/kafka-broker",
     "src/placement-center",
     "src/cli-command",
     "src/delay-message",
     "src/idempotent-message",
+    "src/schema-register",
     "src/grpc-clients",
     "src/cmd",
     "src/common/base",
@@ -133,14 +135,21 @@ openraft = { git = "https://github.com/databendlabs/openraft.git", features = [
 validator = { version = "0.18", features = ["derive"] }
 rand = "0.8.5"
 opendal = { version = "0.51", features = ["services-s3"] }
+valico = "4.0.0"
+apache-avro = { version = "0.17.0" }
+protobuf = "3.7.1"
+protobuf-codegen = "3.7.1"
+
 #format
 prettytable-rs = "^0.10"
 ## workspaces members
 mqtt-broker = { path = "src/mqtt-broker" }
 amqp-broker = { path = "src/amqp-broker" }
+kafka-broker = { path = "src/kafka-broker" }
 delay-message = { path = "src/delay-message" }
 idempotent-message = { path = "src/idempotent-message" }
 placement-center = { path = "src/placement-center" }
+schema-register = { path = "src/schema-register" }
 cli-command = { path = "src/cli-command" }
 grpc-clients = { path = "src/grpc-clients" }
 journal-server = { path = "src/journal-server" }
