--- a/src/schema-register/Cargo.toml
+++ b/src/schema-register/Cargo.toml
@@ -13,39 +13,27 @@
 # limitations under the License.
 
 [package]
-name = "common-base"
+name = "schema-register"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+
 [dependencies]
-tokio.workspace = true
-lazy_static.workspace = true
-prometheus.workspace = true
-thiserror.workspace = true
-snowflake.workspace = true
+bytes.workspace = true
 axum.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-toml.workspace = true
-uuid.workspace = true
-env_logger = "0.10.0"
-local-ip-address = "0.6.1"
-tonic.workspace = true
-humantime-serde.workspace = true
-prost.workspace = true
-rocksdb.workspace = true
-serde_yaml.workspace = true
-log4rs.workspace = true
+thiserror.workspace = true
+common-base.workspace = true
+storage-adapter.workspace = true
+metadata-struct.workspace = true
+dashmap.workspace = true
+tokio.workspace = true
+tokio-util.workspace = true
 log.workspace = true
-bincode.workspace = true
-mysql.workspace = true
-clap.workspace = true
-regex.workspace = true
-opendal.workspace = true
-prometheus-client.workspace = true
-opentelemetry.workspace = true
-opentelemetry_sdk.workspace = true
-opentelemetry-otlp.workspace = true
+futures.workspace = true
 valico.workspace = true
+serde_json.workspace = true
 apache-avro.workspace = true
+serde.workspace = true
+protobuf.workspace = true
+protobuf-codegen.workspace = true
