add examples for protofish

--- a/src/schema-register/Cargo.toml
+++ b/src/schema-register/Cargo.toml
@@ -37,3 +37,4 @@ apache-avro.workspace = true
 serde.workspace = true
 protobuf.workspace = true
 protobuf-codegen.workspace = true
+protofish.workspace = true
