--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,6 +139,7 @@ valico = "4.0.0"
 apache-avro = { version = "0.17.0" }
 protobuf = "3.7.1"
 protobuf-codegen = "3.7.1"
+protofish = { version = "0.5.2"}
 
 #format
 prettytable-rs = "^0.10"
