--- a/src/placement-center/Cargo.toml
+++ b/src/placement-center/Cargo.toml
@@ -40,4 +40,6 @@ log.workspace = true
 mobc.workspace = true
 tracing.workspace = true
 rocksdb.workspace = true
+tower.workspace = true
+futures.workspace = true
 prost-validate = { workspace = true, features = ["derive"] }
