--- a/src/placement-center/Cargo.toml
+++ b/src/placement-center/Cargo.toml
@@ -42,4 +42,5 @@ tracing.workspace = true
 rocksdb.workspace = true
 tower.workspace = true
 futures.workspace = true
+prometheus-client.workspace = true
 prost-validate = { workspace = true, features = ["derive"] }
