--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -49,3 +49,4 @@ opentelemetry_sdk.workspace = true
 opentelemetry-otlp.workspace = true
 valico.workspace = true
 apache-avro.workspace = true
+crc32fast.workspace = true
