--- a/example/mqtt-cluster/mqtt-server/node-3.toml
+++ b/example/mqtt-cluster/mqtt-server/node-3.toml
@@ -15,8 +15,7 @@
 cluster_name = "mqtt-broker"
 broker_id = 3
 grpc_port = 39981
-http_port = 39982
-placement_center = ["127.0.0.1:1228","127.0.0.1:2228","127.0.0.1:3228"]
+placement_center = ["127.0.0.1:1228", "127.0.0.1:2228", "127.0.0.1:3228"]
 
 [network]
 local_ip = "127.0.0.1"
@@ -42,7 +41,9 @@ lock_try_mut_sleep_time_ms = 50
 storage_type = "placement"
 
 [prometheus]
-model = "push"
+enable = true
+model = "pull"
+port = 9092
 push_gateway_server = "127.0.0.1:8081"
 interval = 10
 header = ""
