--- a/example/mqtt-cluster/placement-center/node-1.toml
+++ b/example/mqtt-cluster/placement-center/node-1.toml
@@ -16,8 +16,7 @@ cluster_name = "placement-test"
 
 [node]
 node_id = 1
-# nodes = { 1 = "127.0.0.1:1228", 2 = "127.0.0.1:2228", 3 = "127.0.0.1:3228" }
-nodes = { 1 = "127.0.0.1:1228"}
+nodes = { 1 = "127.0.0.1:1228", 2 = "127.0.0.1:2228", 3 = "127.0.0.1:3228" }
 
 [network]
 local_ip = "127.0.0.1"
@@ -30,6 +29,10 @@ runtime_work_threads = 100
 [heartbeat]
 heartbeat_timeout_ms = 10000
 heartbeat_check_time_ms = 1000
+
+[prometheus]
+model = "pull"
+port = 3306
 
 [rocksdb]
 data_path = "./robust-data-test/placement-center-1/data"
