--- a/config/journal-server.toml
+++ b/config/journal-server.toml
@@ -56,5 +56,5 @@ shard_replica_num = 1
 max_segment_size = 1048576
 
 [log]
-log_config = "./config/log4rs.yaml"
+log_config = "./config/log-config/journal-log4rs.yaml"
 log_path = "./robust-data/journal-server/logs"
