fix(rdkafka): 修复 Win 编译问题
- 启用 rdkafka 的 cmake-build 特性解决 Win 编译问题

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -140,8 +140,8 @@ valico = "4.0.0"
 apache-avro = { version = "0.17.0" }
 protobuf = "3.7.1"
 protobuf-codegen = "3.7.1"
-protofish = { version = "0.5.2"}
-rdkafka = { version = "0.37.0" }
+protofish = { version = "0.5.2" }
+rdkafka = { version = "0.37.0", features = ["cmake-build"] }
 crc32fast = "1.4.2"
 
 #format
