--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -63,12 +63,12 @@ jobs:
             target/nextest/ci/junit.xml
           if-no-files-found: error
 
-      - name: rust-grcov
-        uses: actions-rs/grcov@v0.1
-      - name: Codecov
-        uses: codecov/codecov-action@v5
-        env:
-          CODECOV_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          verbose: true
-          fail_ci_if_error: true
+      # - name: rust-grcov
+      #   uses: actions-rs/grcov@v0.1
+      # - name: Codecov
+      #   uses: codecov/codecov-action@v5
+      #   env:
+      #     CODECOV_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     verbose: true
+      #     fail_ci_if_error: true
