--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -46,5 +46,7 @@ journal-server.workspace = true
 cli-command.workspace = true
 clap-cargo.workspace = true
 protocol.workspace = true
+console-subscriber.workspace = true
+
 [dev-dependencies]
 mockall.workspace = true
