refactor(placement-center): remove calc_init_node function and update log config path
- Remove calc_init_node function from raft_node.rs
- Update log_config path in placement center config files
- Refactor node initialization logic for better readability and efficiency

Reason:  Raft::initialize() this method is called on more than one node simultaneously with the same membership, it is safe, as the voting protocol ensures consistency.

--- a/example/mqtt-cluster/placement-center/node-3.toml
+++ b/example/mqtt-cluster/placement-center/node-3.toml
@@ -39,5 +39,5 @@ data_path = "./robust-data/placement-center-3/data"
 max_open_files = 10000
 
 [log]
-log_config = "./config/log4rs.yaml"
+log_config = "./config/log-config/place-log4rs.yaml"
 log_path = "./robust-data/placement-center-3/logs"
