test(placement-center): add unit tests for KvStorage
- Implement unit tests for KvStorage to ensure basic functionality- Add tests for set, get, delete, and exists operations
- Include tests for prefix-based retrieval
- Update dependencies to include tempfile for temporary directory creation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -167,7 +167,7 @@ metadata-struct = { path = "src/common/metadata-struct" }
 third-driver = { path = "src/common/third-driver" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
-
+tempfile = "3.9.0"
 [profile.dev]
 overflow-checks = false
 incremental = true
