--- a/.github/workflows/journal-ig-base-test.yml
+++ b/.github/workflows/journal-ig-base-test.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Journal Server Ig Test
+name: Journal Server Base Ig Test
 
 on:
   push:
