--- a/.github/workflows/journal-ig-grpc-test.yml
+++ b/.github/workflows/journal-ig-grpc-test.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Placement Center Ig Test
+name: Journal Server GRPC Ig Test
 
 on:
   push:
@@ -51,7 +51,7 @@ jobs:
           args: --locked
       - uses: actions/checkout@v3
       - name: Run tests
-        run: sh ./scripts/place-ig-test.sh ci
+        run: sh ./scripts/journal-ig-test.sh dev grpc
         # we need change shell scripts to product only one junit.xml
 #      - name: Upload JUnit report
 #        # Run this step even if the test step fails. Upload it right now because
