--- a/.github/workflows/journal-ig-test.yml
+++ b/.github/workflows/journal-ig-test.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Journal Server GRPC Ig Test
+name: Journal Server Base Ig Test
 
 on:
   push:
@@ -51,7 +51,11 @@ jobs:
           args: --locked
       - uses: actions/checkout@v3
       - name: Run tests
+        run: sh ./scripts/journal-ig-test.sh dev base
+      - name: Run tests
         run: sh ./scripts/journal-ig-test.sh dev grpc
+      - name: Run tests
+        run: sh ./scripts/journal-ig-test.sh dev protocol
         # we need change shell scripts to product only one junit.xml
 #      - name: Upload JUnit report
 #        # Run this step even if the test step fails. Upload it right now because
