ci: Optimize CI for integration tests (#1006)
* ci: Optimize CI for integration tests

--- a/.github/workflows/mqtt-ig-test.yml
+++ b/.github/workflows/mqtt-ig-test.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: MQTT Server Ig Test
+name: MQTT Server Protocol Ig Test
 
 on:
   push:
@@ -47,10 +47,10 @@ jobs:
       - name: Install cargo-nextest
         uses: baptiste0928/cargo-install@v1
         with:
-          crate: cargo-nextest
+          crate: cargo-nextest 
           args: --locked
       - name: Run tests
-        run: make mqtt-ig-test-ci
+        run: sh ./scripts/mqtt-ig-test.sh ci
         # we need change shell scripts to product only one junit.xml
 #      - name: Upload JUnit report
 #        # Run this step even if the test step fails. Upload it right now because
