--- a/.github/workflows/ig-all-test.yml
+++ b/.github/workflows/ig-all-test.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Bin Base Ig Test
+name: Ig All Test
 
 on:
   push:
