fix: update ubuntu image version

--- a/.github/workflows/apidoc.yml
+++ b/.github/workflows/apidoc.yml
@@ -31,7 +31,7 @@ env:
 
 jobs:
   apidoc:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: arduino/setup-protoc@v1
