--- a/.github/workflows/ig-all-test.yml
+++ b/.github/workflows/ig-all-test.yml
@@ -34,7 +34,7 @@ env:
 jobs:
   linux-tests:
     name: cargo test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 300
     container:
       image: amd64/rust
