--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ tokio-rustls = { version = "0.26", default-features = false, features = [
 rustls = { version = "0.23.23", default-features = false }
 rustls-pemfile = "2"
 ## axum
-axum = { version = "0.7.2", features = ["ws"] }
+axum = { version = "0.7.2", features = ["ws", "http1", "http2"] }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
 mysql = "*"
@@ -170,9 +170,16 @@ third-driver = { path = "src/common/third-driver" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
 robustmq-proto-build = { git = "https://github.com/robustmq/robustmq-proto.git", branch = "main" }
+pprof-monitor = { path = "src/common/pprof-monitor" }
 
 # other
 tempfile = "3.9.0"
+
+#pprof
+pprof = { version = "0.14.0", features = ["flamegraph"] }
+
+#http
+hyper = { version = "1.6.0", features = ["server", "http1"] }
 
 [profile.dev]
 overflow-checks = false
