--- a/src/delay-message/Cargo.toml
+++ b/src/delay-message/Cargo.toml
@@ -31,3 +31,5 @@ tokio.workspace = true
 tokio-util.workspace = true
 tracing.workspace = true
 futures.workspace = true
+serde.workspace = true
+serde_json.workspace = true
