--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -41,3 +41,4 @@ tonic.workspace = true
 opentelemetry.workspace = true
 opentelemetry_sdk.workspace = true
 opentelemetry-otlp.workspace = true
+apache-avro.workspace = true
