--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -41,4 +41,5 @@ tonic.workspace = true
 opentelemetry.workspace = true
 opentelemetry_sdk.workspace = true
 opentelemetry-otlp.workspace = true
+bincode.workspace = true
 apache-avro.workspace = true
