--- a/Cargo.toml
+++ b/Cargo.toml
@@ -169,7 +169,7 @@ metadata-struct = { path = "src/common/metadata-struct" }
 third-driver = { path = "src/common/third-driver" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
-robustmq-proto-build = { git = "https://github.com/PorterZhang2021/robustmq-proto.git", branch = "get_cluster_config" }
+robustmq-proto-build = { git = "https://github.com/HeartLinked/robustmq-proto.git", branch = "dev_copilot_list1" }
 pprof-monitor = { path = "src/common/pprof-monitor" }
 
 
