--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -53,6 +53,7 @@ valico.workspace = true
 apache-avro.workspace = true
 crc32fast.workspace = true
 tempfile.workspace = true
+temp-env.workspace = true
 
 # A custom cfg for enabling tokio-console in tracing-subscriber
 # Enable this by running with `RUSTFLAGS="--cfg tokio_console"`
