--- a/config/log-config/mqtt-tracing.toml
+++ b/config/log-config/mqtt-tracing.toml
@@ -16,14 +16,14 @@
 kind = "Console"
 level = "Info"
 
-# [appenders.server]
-# kind = "RollingFile"
-# level = "Info"
-# rotation = "Minutely"
-# directory = "./logs/tests"
-# prefix = "mqtt-server-"
-# suffix = "log"
-# max_log_files = 10
+[appenders.server]
+kind = "RollingFile"
+level = "Info"
+rotation = "Minutely"
+directory = "./logs/tests"
+prefix = "mqtt-server-"
+suffix = "log"
+max_log_files = 10
 
 [appenders.slow_sub]
 kind = "RollingFile"
