--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,7 +125,7 @@ mobc = "0.8.3"
 dashmap = { version = "6.1.0", features = ["serde"] }
 snowflake = "1.3.0"
 rumqttc = "0.24.0"
-paho-mqtt = { version = "0.12.5", default-features = false, features = [
+paho-mqtt = { version = "0.13.3", default-features = false, features = [
     "bundled",
     "vendored-ssl",
 ] }
@@ -143,7 +143,8 @@ apache-avro = { version = "0.17.0" }
 protobuf = "3.7.1"
 protobuf-codegen = "3.7.1"
 protofish = { version = "0.5.2" }
-rdkafka = { version = "0.37.0", features = ["cmake-build"] }
+rdkafka-sys = "4.8.0"
+rdkafka = { version = "0.37.0" }
 crc32fast = "1.4.2"
 console-subscriber = "0.4.1"
 
