--- a/deny.toml
+++ b/deny.toml
@@ -105,7 +105,6 @@ ignore = [
 allow = [
     "MIT",
     "Apache-2.0",
-    "MPL-2.0",
     "BSD-2-Clause",
     "BSD-3-Clause",
     "ISC",
@@ -113,6 +112,7 @@ allow = [
     "EPL-2.0",
     "Unicode-3.0",
     "CDDL-1.0",
+    "CDLA-Permissive-2.0"
 ]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
